[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://player.png" type="Texture" id=3]
[ext_resource path="res://AsteroidSpawner.gd" type="Script" id=4]
[ext_resource path="res://DeathCooldown.gd" type="Script" id=5]
[ext_resource path="res://space_music.ogg" type="AudioStream" id=6]
[ext_resource path="res://MusicPlayer.gd" type="Script" id=7]

[sub_resource type="ConvexPolygonShape2D" id=1]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://font/DejaVuSerifCondensed-Bold.ttf"

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = SubResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 1024, 0, 1024, 600, 0, 600 )

[node name="Player" type="KinematicBody2D" parent="." groups=[
"player",
]]
position = Vector2( 512, 300 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
scale = Vector2( 5.5, 5.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 3 )

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="Player"]
position = Vector2( -1.04755, -4.88836 )
scale = Vector2( 4.87577, 4.49169 )

[node name="Trail" type="CPUParticles2D" parent="Player"]
amount = 20
lifetime = 2.0
local_coords = false
gravity = Vector2( 0, 0 )

[node name="ShootCooldown" type="Timer" parent="Player"]
wait_time = 0.2
one_shot = true

[node name="AsteroidSpawner" type="Timer" parent="."]
wait_time = 1.5
autostart = true
script = ExtResource( 4 )

[node name="DeathCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
script = ExtResource( 5 )

[node name="Score" type="RichTextLabel" parent="."]
visible = false
margin_left = 391.609
margin_top = 271.503
margin_right = 647.609
margin_bottom = 337.503
custom_fonts/normal_font = SubResource( 3 )

[node name="ToggleSFXCooldown" type="Timer" parent="."]
one_shot = true

[node name="ToggleMusicCooldown" type="Timer" parent="."]
one_shot = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -3.249
autoplay = true
bus = "Music"
script = ExtResource( 7 )
[connection signal="timeout" from="AsteroidSpawner" to="AsteroidSpawner" method="_on_AsteroidSpawner_timeout"]
[connection signal="timeout" from="DeathCooldown" to="DeathCooldown" method="_on_deathCooldown_timeout"]
[connection signal="finished" from="MusicPlayer" to="MusicPlayer" method="_on_MusicPlayer_finished"]
